docs/api/qiskit/0.24/qiskit.extensions.UnitaryGate.mdx
---
title: UnitaryGate
description: API reference for qiskit.extensions.UnitaryGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.UnitaryGate
---

<span id="qiskit-extensions-unitarygate" />

# qiskit.extensions.UnitaryGate

<Class id="qiskit.extensions.UnitaryGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/extensions/unitary.py" signature="UnitaryGate(data, label=None)">
  Class for representing unitary gates

  Create a gate from a numeric unitary matrix.

  **Parameters**

  *   **data** (*matrix or* [*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – unitary operator.
  *   **label** (*str*) – unitary name for backend \[Default: None].

  **Raises**

  **ExtensionError** – if input data is not an N-qubit unitary operator.

  ### \_\_init\_\_

  <Function id="qiskit.extensions.UnitaryGate.__init__" name="__init__" signature="__init__(data, label=None)">
    Create a gate from a numeric unitary matrix.

    **Parameters**

    *   **data** (*matrix or* [*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – unitary operator.
    *   **label** (*str*) – unitary name for backend \[Default: None].

    **Raises**

    **ExtensionError** – if input data is not an N-qubit unitary operator.
  </Function>

  ## Methods

  |                                                                                                                                               |                                                                                                                              |
  | --------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.extensions.UnitaryGate.__init__ "qiskit.extensions.UnitaryGate.__init__")(data\[, label])                                | Create a gate from a numeric unitary matrix.                                                                                 |
  | [`add_decomposition`](#qiskit.extensions.UnitaryGate.add_decomposition "qiskit.extensions.UnitaryGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary.                                                     |
  | [`adjoint`](#qiskit.extensions.UnitaryGate.adjoint "qiskit.extensions.UnitaryGate.adjoint")()                                                 | Return the adjoint of the unitary.                                                                                           |
  | [`assemble`](#qiskit.extensions.UnitaryGate.assemble "qiskit.extensions.UnitaryGate.assemble")()                                              | Assemble a QasmQobjInstruction                                                                                               |
  | [`broadcast_arguments`](#qiskit.extensions.UnitaryGate.broadcast_arguments "qiskit.extensions.UnitaryGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.                                                               |
  | [`c_if`](#qiskit.extensions.UnitaryGate.c_if "qiskit.extensions.UnitaryGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.                                                                 |
  | [`conjugate`](#qiskit.extensions.UnitaryGate.conjugate "qiskit.extensions.UnitaryGate.conjugate")()                                           | Return the conjugate of the unitary.                                                                                         |
  | [`control`](#qiskit.extensions.UnitaryGate.control "qiskit.extensions.UnitaryGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Return controlled version of gate                                                                                            |
  | [`copy`](#qiskit.extensions.UnitaryGate.copy "qiskit.extensions.UnitaryGate.copy")(\[name])                                                   | Copy of the instruction.                                                                                                     |
  | [`inverse`](#qiskit.extensions.UnitaryGate.inverse "qiskit.extensions.UnitaryGate.inverse")()                                                 | Return the adjoint of the unitary.                                                                                           |
  | [`is_parameterized`](#qiskit.extensions.UnitaryGate.is_parameterized "qiskit.extensions.UnitaryGate.is_parameterized")()                      | Return True .IFF.                                                                                                            |
  | [`mirror`](#qiskit.extensions.UnitaryGate.mirror "qiskit.extensions.UnitaryGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                                                                                  |
  | [`power`](#qiskit.extensions.UnitaryGate.power "qiskit.extensions.UnitaryGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                                                                     |
  | [`qasm`](#qiskit.extensions.UnitaryGate.qasm "qiskit.extensions.UnitaryGate.qasm")()                                                          | The qasm for a custom unitary gate This is achieved by adding a custom gate that corresponds to the definition of this gate. |
  | [`repeat`](#qiskit.extensions.UnitaryGate.repeat "qiskit.extensions.UnitaryGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.                                                                 |
  | [`reverse_ops`](#qiskit.extensions.UnitaryGate.reverse_ops "qiskit.extensions.UnitaryGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.                                                          |
  | [`to_matrix`](#qiskit.extensions.UnitaryGate.to_matrix "qiskit.extensions.UnitaryGate.to_matrix")()                                           | Return matrix for the unitary.                                                                                               |
  | [`transpose`](#qiskit.extensions.UnitaryGate.transpose "qiskit.extensions.UnitaryGate.transpose")()                                           | Return the transpose of the unitary.                                                                                         |
  | [`validate_parameter`](#qiskit.extensions.UnitaryGate.validate_parameter "qiskit.extensions.UnitaryGate.validate_parameter")(parameter)       | Unitary gate parameter has to be an ndarray.                                                                                 |

  ## Attributes

  |                                                                                                                  |                                                                               |
  | ---------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.extensions.UnitaryGate.decompositions "qiskit.extensions.UnitaryGate.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.extensions.UnitaryGate.definition "qiskit.extensions.UnitaryGate.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.extensions.UnitaryGate.duration "qiskit.extensions.UnitaryGate.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.extensions.UnitaryGate.label "qiskit.extensions.UnitaryGate.label")                            | Return gate label                                                             |
  | [`params`](#qiskit.extensions.UnitaryGate.params "qiskit.extensions.UnitaryGate.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.extensions.UnitaryGate.unit "qiskit.extensions.UnitaryGate.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.extensions.UnitaryGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### adjoint

  <Function id="qiskit.extensions.UnitaryGate.adjoint" name="adjoint" signature="adjoint()">
    Return the adjoint of the unitary.
  </Function>

  ### assemble

  <Function id="qiskit.extensions.UnitaryGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.extensions.UnitaryGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.extensions.UnitaryGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### conjugate

  <Function id="qiskit.extensions.UnitaryGate.conjugate" name="conjugate" signature="conjugate()">
    Return the conjugate of the unitary.
  </Function>

  ### control

  <Function id="qiskit.extensions.UnitaryGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of controls to add to gate (default=1)
    *   **label** (*str*) – optional gate label
    *   **ctrl\_state** (*int or str or None*) – The control state in decimal or as a bit string (e.g. ‘1011’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    controlled version of gate.

    **Return type**

    [UnitaryGate](#qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    *   **QiskitError** – Invalid ctrl\_state.
    *   **ExtensionError** – Non-unitary controlled unitary.
  </Function>

  ### copy

  <Function id="qiskit.extensions.UnitaryGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.extensions.UnitaryGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.extensions.UnitaryGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.extensions.UnitaryGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.extensions.UnitaryGate.inverse" name="inverse" signature="inverse()">
    Return the adjoint of the unitary.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.extensions.UnitaryGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.extensions.UnitaryGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.extensions.UnitaryGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.extensions.UnitaryGate.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### power

  <Function id="qiskit.extensions.UnitaryGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](#qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.extensions.UnitaryGate.qasm" name="qasm" signature="qasm()">
    The qasm for a custom unitary gate This is achieved by adding a custom gate that corresponds to the definition of this gate. It gives the gate a random name if one hasn’t been given to it.
  </Function>

  ### repeat

  <Function id="qiskit.extensions.UnitaryGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.extensions.UnitaryGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.extensions.UnitaryGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return matrix for the unitary.
  </Function>

  ### transpose

  <Function id="qiskit.extensions.UnitaryGate.transpose" name="transpose" signature="transpose()">
    Return the transpose of the unitary.
  </Function>

  ### unit

  <Function id="qiskit.extensions.UnitaryGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.extensions.UnitaryGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Unitary gate parameter has to be an ndarray.
  </Function>
</Class>

